created css file

--- a/index.html
+++ b/index.html
@@ -1,16 +1,30 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="description" content="My Professional Porftolio" />
-    <meta name="keywords" content="Digital Portfolio for Designer" />
-    <meta name="author" content="Sara Bretes" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Saras Portfolio</title>
-    <link href="style.css" rel="stylesheet" />
-  </head>
 
-  <body>
-    <h3>Hello world</h3>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="description" content="My Professional Porftolio" />
+  <meta name="keywords" content="Digital Portfolio for Designer" />
+  <meta name="author" content="Sara Bretes" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Saras Portfolio</title>
+  <link href="style.css" rel="stylesheet" />
+</head>
+<header>
+  <nav>
+    <div>
+      LOGO
+    </div>
+    <ul>
+      <li>Home</li>
+      <li>My work</li>
+      <li>Contacts</li>
+    </ul>
+  </nav>
+</header>
+
+<body>
+  <h3>Hello world</h3>
+</body>
+
 </html>
