--- a/index.html
+++ b/index.html
@@ -1,30 +1,39 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="description" content="My Professional Porftolio" />
+    <meta name="keywords" content="Digital Portfolio for Designer" />
+    <meta name="author" content="Sara Bretes" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Saras Portfolio</title>
+    <link href="style.css" rel="stylesheet" />
+    <script
+      src="https://kit.fontawesome.com/74df61d62d.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <header>
+    <nav>
+      <div>
+        LOGO
+      </div>
+      <ul id="menus">
+        <li>Home</li>
+        <li>My Work</li>
+        <li>Contacts</li>
+      </ul>
+      <i onclick="verticalMenus()" class="fas fa-bars"></i>
+      <ul id="mobileMenus">
+        <li>Home</li>
+        <li>My Work</li>
+        <li>Contacts</li>
+      </ul>
+    </nav>
+  </header>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="description" content="My Professional Porftolio" />
-  <meta name="keywords" content="Digital Portfolio for Designer" />
-  <meta name="author" content="Sara Bretes" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Saras Portfolio</title>
-  <link href="style.css" rel="stylesheet" />
-</head>
-<header>
-  <nav>
-    <div>
-      LOGO
-    </div>
-    <ul>
-      <li>Home</li>
-      <li>My work</li>
-      <li>Contacts</li>
-    </ul>
-  </nav>
-</header>
-
-<body>
-  <h3>Hello world</h3>
-</body>
-
+  <body>
+    <h3>Hello world</h3>
+    <script src="javascript.js"></script>
+  </body>
 </html>
