changes on the nav bar

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Saras Portfolio</title>
     <link href="style.css" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Dosis&display=swap"
+      rel="stylesheet"
+    />
     <script
       src="https://kit.fontawesome.com/74df61d62d.js"
       crossorigin="anonymous"
@@ -16,19 +20,15 @@
   <header>
     <nav>
       <div>
-        LOGO
+        <strong>Sara Bretes</strong>
       </div>
-      <ul id="menus">
-        <li>Home</li>
-        <li>My Work</li>
-        <li>Contacts</li>
+      <ul class="menus">
+        <li><a href="">Home</a></li>
+        <li><a href="">About</a></li>
+        <li><a href="">Work</a></li>
+        <li><a href="">Contacts</a></li>
       </ul>
-      <i onclick="verticalMenus()" class="fas fa-bars"></i>
-      <ul id="mobileMenus">
-        <li>Home</li>
-        <li>My Work</li>
-        <li>Contacts</li>
-      </ul>
+      <i class="fas fa-bars"></i>
     </nav>
   </header>
 
