--- a/index.html
+++ b/index.html
@@ -1,50 +1,73 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-GB">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="description" content="My Professional Porftolio" />
+    <meta name="keywords" content="Digital Portfolio for Designer" />
+    <meta name="author" content="Sara Bretes" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Saras Portfolio</title>
+    <link href="style.css" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Dosis&display=swap"
+      rel="stylesheet"
+    />
+    <script
+      src="https://kit.fontawesome.com/74df61d62d.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="description" content="My Professional Porftolio" />
-  <meta name="keywords" content="Digital Portfolio for Designer" />
-  <meta name="author" content="Sara Bretes" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Saras Portfolio</title>
-  <link href="style.css" rel="stylesheet" />
-  <link href="https://fonts.googleapis.com/css?family=Dosis&display=swap" rel="stylesheet" />
-  <script src="https://kit.fontawesome.com/74df61d62d.js" crossorigin="anonymous"></script>
-</head>
-<header>
-  <nav>
-    <div>
-      <strong>Sara Bretes</strong>
-    </div>
-    <ul class="menus">
-      <li><a href="">Home</a></li>
-      <li><a href="">About</a></li>
-      <li><a href="">Work</a></li>
-      <li><a href="">Contacts</a></li>
-    </ul>
-    <i class="fas fa-bars"></i>
-  </nav>
-</header>
-
-<body>
-  <section id="intro">
-    <div id="introText">
-      <h3>Hello and Welcome!</h3><br />
-      <p>My name is Sara. I've worked as a designer for the past 7 years and I'm currently working as a Designer for a
-        Wealth Management Company in the City.</p>
-      <p>Here you can find out more about me, projects I've worked on, the tools I've used to where I've studied.</p>
-      <p>If you have any questions please don't hesitate in <a href="">contacting me</a>.</p>
-      </p>
-    </div>
-  </section>
-  <footer>
-    <p>Sara Bretes &copy; All rights Reserved</p>
-    <div id="social">
-
-    </div>
-  </footer>
-  <script src="javascript.js"></script>
-</body>
-
+  <body>
+    <header>
+      <nav>
+        <div>
+          <strong>Sara Bretes</strong>
+        </div>
+        <ul class="menus">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="">Work</a></li>
+          <li><a href="">Contacts</a></li>
+        </ul>
+        <i class="fas fa-bars"></i>
+      </nav>
+    </header>
+    <section id="intro">
+      <div id="introText">
+        <h3>Hello and Welcome!</h3>
+        <br />
+        <p>
+          My name is Sara. I've worked as a designer for the past 7 years and
+          I'm currently working for a Wealth Management Company in the City.
+        </p>
+        <p>
+          Here you can find out more about me, projects I've worked on, the
+          tools I've used to where I've studied.
+        </p>
+        <p>
+          If you have any questions please don't hesitate in
+          <a href="">contacting me</a>.
+        </p>
+      </div>
+    </section>
+    <footer>
+      <p>Sara Bretes &copy; All rights Reserved</p>
+      <div id="social">
+        <a href="https://twitter.com/Totinhas" target="_blank"
+          ><i class="fab fa-twitter"></i
+        ></a>
+        <a href="https://www.linkedin.com/in/sarabretes/" target="_blank"
+          ><i class="fab fa-linkedin-in"></i
+        ></a>
+        <a href="https://www.behance.net/sarabretes" target="_blank"
+          ><i class="fab fa-behance"></i
+        ></a>
+        <a href="mailto:sarabretes@me.com?subject=I saw your portfolio..."
+          ><i class="fas fa-envelope"></i
+        ></a>
+      </div>
+    </footer>
+    <script src="javascript.js"></script>
+  </body>
 </html>
