--- a/pages/about.html
+++ b/pages/about.html
@@ -54,7 +54,7 @@
               <tr>
                 <td></td>
                 <td>
-                  <h4>Digital Designer</h4>
+                  <h4>Senior Digital Designer</h4>
                 </td>
               </tr>
               <tr>
@@ -65,23 +65,29 @@
                 <td>
                   <ul>
                     <li>
-                      Mantining the company website with regular design updates
+                      Responsible for digital brand guidelines, keep it up to
+                      date with best UX/UI principles
                     </li>
                     <li>
-                      Creating bespoke email templates withing brand guidelines
+                      Design, code and cross-browser compatibility of campaign
+                      pages. Setting up Google tag manager and analysing data to
+                      see page performance and how to improve it
                     </li>
+                    <li>Design, code and test bespoke email templates</li>
                     <li>
-                      Creation of portal banners and gifs for social media;
-                    </li>
-                    <li>
-                      Creation digital brand guidelines and making sure they are
-                      followed across the company and by external suppliers;
+                      Set up website and campaign forms with appropriate
+                      validation and email automation.
                     </li>
                     <li>Intranet page redesign</li>
                     <li>
-                      Design and creation of animated ads for google adwords
+                      UX research base on data for conversation improvement
                     </li>
+                    <li>Image, video and podcast editing.</li>
+                    <li>Animated google ads in html5</li>
                     <li>Cretion of screensavers for internal campaigns</li>
+                    <li>
+                      Direct report management, appraisal, career development.
+                    </li>
                   </ul>
                 </td>
               </tr>
@@ -99,13 +105,17 @@
                 <td>
                   <ul>
                     <li>
-                      Creation of portal banners, and gif images for the portal;
+                      Design and wireframe of pursuits sites resorting to
+                      brainstorming, personas and user journeys
                     </li>
-                    <li>Brochures and flyers design;</li>
-                    <li>Generate OFT files;</li>
-                    <li>Using concep to send and test campaigns;</li>
-                    <li>Intranet page redesign;</li>
-                    <li>Video editing;</li>
+                    <li>
+                      Responsible for the design, code and test of email
+                      campaigns within KPMG brand guidelines
+                    </li>
+                    <li>Design of website banners and gif images</li>
+                    <li>Email testing on Litmus and Email on Acid</li>
+                    <li>Image and video editing</li>
+                    <li>Video editing</li>
                   </ul>
                 </td>
               </tr>
@@ -237,7 +247,7 @@
           If you want to know more about me, please download my complete CV
         </h4>
         <div class="btn">
-          <a href="../files/CVPlaceHolder.pdf">download full CV</a>
+          <a href="../files/CVSaraBretes2020.pdf">download full CV</a>
         </div>
       </section>
       <section id="tools">
