--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -130,6 +130,11 @@
           <button onclick="fullFormValidation()" type="submit" value="Submit">
             SUBMIT
           </button>
+          <input
+            type="hidden"
+            name="_next"
+            value="https://totinhas.github.io/SaraBretesPortfolio/pages/about.html"
+          />
           <h2 id="formSubmissionStatus"></h2>
         </form>
       </section>
