replacement email address

--- a/pages/about.html
+++ b/pages/about.html
@@ -301,7 +301,9 @@
           title="Behance Account"
           ><i aria-hidden="true" class="fab fa-behance"></i
         ></a>
-        <a href="mailto:sarabretes@me.com?subject=I%20saw%20your%20portfolio..."
+        <a
+          href="https://totinhas.github.io/SaraBretesPortfolio/pages/contacts.html#contactForm"
+          target="_blank"
           ><i
             aria-hidden="true"
             class="fas fa-envelope"
