--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -76,7 +76,7 @@
           <h2>Contact me</h2>
         </div>
         <form
-          action="https://formsubmit.co/sarinha.bretes@gmail.com"
+          action="https://formsubmit.co/sarabretesportfolio@gmail.com"
           method="POST"
         >
           <label for="fullName">Full Name:</label>
@@ -133,7 +133,7 @@
           <input
             type="hidden"
             name="_next"
-            value="https://totinhas.github.io/SaraBretesPortfolio/pages/about.html"
+            value="https://totinhas.github.io/SaraBretesPortfolio/pages/thank-you.html"
           />
           <h2 id="formSubmissionStatus"></h2>
         </form>
@@ -164,8 +164,8 @@
           ><i aria-hidden="true" class="fab fa-behance"></i
         ></a>
         <a
-          href="mailto:sarabretes@me.com?subject=I%20saw%20your%20portfolio..."
-          rel="noopener"
+          href="https://totinhas.github.io/SaraBretesPortfolio/pages/contacts.html#contactForm"
+          target="_blank"
           ><i
             aria-hidden="true"
             class="fas fa-envelope"
