--- a/projects/quotemehappy.html
+++ b/projects/quotemehappy.html
@@ -96,8 +96,8 @@
           ><i aria-hidden="true" class="fab fa-behance"></i
         ></a>
         <a
-          href="mailto:sarabretes@me.com?subject=I%20saw%20your%20portfolio..."
-          rel="noopener"
+          href="https://totinhas.github.io/SaraBretesPortfolio/pages/contacts.html#contactForm"
+          target="_blank"
           ><i
             aria-hidden="true"
             class="fas fa-envelope"
