--- a/pages/thank-you.html
+++ b/pages/thank-you.html
@@ -8,7 +8,7 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <title>Saras Portfolio | Contact me</title>
     <link href="../css/stylesInCommon.css" rel="stylesheet" />
-    <link href="../css/contacts.css" rel="stylesheet" />
+    <link href="../css/thankYou.css" rel="stylesheet" />
     <link
       href="https://fonts.googleapis.com/css?family=Dosis&display=swap"
       rel="stylesheet"
@@ -69,6 +69,11 @@
             title="Behance account"
           ></i
         ></a>
+      </section>
+      <section id="thankYou">
+        <h2>Thank you for your interest</h2>
+
+        <a href="./contacts.html"><div class="btn">Contacts page</div></a>
       </section>
     </main>
     <footer>
