thank you title update

--- a/pages/thank-you.html
+++ b/pages/thank-you.html
@@ -6,7 +6,7 @@
     <meta content="Digital Portfolio for Designer" name="keywords" />
     <meta content="Sara Bretes" name="author" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <title>Saras Portfolio | Contact me</title>
+    <title>Saras Portfolio | Thank you</title>
     <link href="../css/stylesInCommon.css" rel="stylesheet" />
     <link href="../css/thankYou.css" rel="stylesheet" />
     <link
