--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="./css/stylesInCommon.css" rel="stylesheet" />
     <link href="./css/index.css" rel="stylesheet" />
     <link
-      href="https://fonts.googleapis.com/css?family=Dosis&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Palanquin:wght@400;500;600;700&display=swap"
       rel="stylesheet"
     />
     <script src="https://kit.fontawesome.com/74df61d62d.js"></script>
@@ -48,16 +48,21 @@
           <h3>Hello and Welcome!</h3>
           <br />
           <p>
-            My name is Sara. I've worked as a designer for the past 7 years and
-            I'm currently working for a Wealth Management Company in the City.
+            I'm Sara and I work as a designer. I'm a dynamic, resourceful and
+            hard- working person with excellent interpersonal skills and the
+            ability to communicate concisely at all levels. A self-starting
+            person who has lots to offer in terms of enthusiasm with the ability
+            to bring high standards to the workplace. Enjoys being part of a
+            successful and productive team. A good problem solver with a strong
+            work ethic and desire to succeed.
           </p>
           <p>
-            Here you can find out more about me, projects I've worked on, the
-            tools I've used to where I've studied.
+            Here you can find out more about me and some of the projects I've
+            worked on.
           </p>
           <p>
             If you have any questions please don't hesitate in
-            <a href="./pages/contacts.html">contacting me</a>.
+            <a href="./pages/contacts.html#contactForm">contacting me</a>.
           </p>
         </div>
       </section>
