--- a/pages/about.html
+++ b/pages/about.html
@@ -10,9 +10,10 @@
     <link href="../css/stylesInCommon.css" rel="stylesheet" />
     <link href="../css/about.css" rel="stylesheet" />
     <link
-      href="https://fonts.googleapis.com/css?family=Dosis&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Palanquin:wght@400;500;600;700&display=swap"
       rel="stylesheet"
     />
+
     <script src="https://kit.fontawesome.com/74df61d62d.js"></script>
   </head>
   <body onload="underlineMenu()">
@@ -119,32 +120,6 @@
                   </ul>
                 </td>
               </tr>
-              <tr>
-                <td></td>
-                <td>
-                  <h4>Designer</h4>
-                </td>
-              </tr>
-              <tr>
-                <td>
-                  <p>Lead Galaxy</p>
-                  <p class="date">2014 - 2015</p>
-                </td>
-                <td>
-                  <ul>
-                    <li>Send the email campaings to different lists;</li>
-                    <li>
-                      Design of responsive landing pages considering UI
-                      principles to place the form on the best position to
-                      maximaze leads;
-                    </li>
-                    <li>
-                      Review source code to make sure the correct ID’s are in
-                      place, so as the tracking and conversion codes;
-                    </li>
-                  </ul>
-                </td>
-              </tr>
             </table>
           </section>
         </section>
@@ -226,10 +201,9 @@
                   <ul>
                     <li>Adobe Creative Cloud</li>
                     <li>Systems Analysis: SSADM and UML</li>
-                    <li>Operating Systems: Linux, OS X and Windows</li>
+                    <li>Programming languages: C, Java, javascript</li>
                     <li>Research Methods</li>
-                    <li>ERP and CRM</li>
-                    <li>Graphic Design</li>
+
                     <li>Distributed information system</li>
                   </ul>
                 </td>
