--- a/pages/thank-you.html
+++ b/pages/thank-you.html
@@ -10,7 +10,7 @@
     <link href="../css/stylesInCommon.css" rel="stylesheet" />
     <link href="../css/thankYou.css" rel="stylesheet" />
     <link
-      href="https://fonts.googleapis.com/css?family=Dosis&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Palanquin:wght@400;500;600;700&display=swap"
       rel="stylesheet"
     />
     <script src="https://kit.fontawesome.com/74df61d62d.js"></script>
