--- a/pages/projects.html
+++ b/pages/projects.html
@@ -10,9 +10,10 @@
     <link href="../css/stylesInCommon.css" rel="stylesheet" />
     <link href="../css/projects.css" rel="stylesheet" />
     <link
-      href="https://fonts.googleapis.com/css?family=Dosis&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Palanquin:wght@400;500;600;700&display=swap"
       rel="stylesheet"
     />
+
     <script src="https://kit.fontawesome.com/74df61d62d.js"></script>
   </head>
 
