added Ve to main projects page

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -169,7 +169,28 @@
     <main>
       <div class="workRow">
         <p id="nothingToShow">Sorry, nothing to display in this category.</p>
-
+        <div
+          class="work userInterface figma photoshop lazyBackground"
+          id="work6"
+        >
+          <a href="../projects/quotemehappy.html" target="_blank">
+            <div class="workInfo">
+              <p>Quotemehappy.com</p>
+              <p>User Interface</p>
+            </div>
+          </a>
+        </div>
+        <div
+          class="work userInterface figma photoshop lazyBackground"
+          id="work7"
+        >
+          <a href="../projects/ve.html" target="_blank">
+            <div class="workInfo">
+              <p>Ve Black friday campaign</p>
+              <p>User Interface</p>
+            </div>
+          </a>
+        </div>
         <div
           class="work graphicDesign illustrator photoshop lazyBackground"
           id="work1"
@@ -223,17 +244,6 @@
             <div class="workInfo">
               <p>Charles Stanley Animated Gif</p>
               <p>Animated Adversiting</p>
-            </div>
-          </a>
-        </div>
-        <div
-          class="work userInterface figma photoshop lazyBackground"
-          id="work6"
-        >
-          <a href="../projects/quotemehappy.html" target="_blank">
-            <div class="workInfo">
-              <p>Quotemehappy.com</p>
-              <p>User Interface</p>
             </div>
           </a>
         </div>
