personal portfolio added to projects

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -171,6 +171,17 @@
         <p id="nothingToShow">Sorry, nothing to display in this category.</p>
         <div
           class="work userInterface figma photoshop lazyBackground"
+          id="work8"
+        >
+          <a href="../projects/portfolio.html" target="_blank">
+            <div class="workInfo">
+              <p>Personal Portfolio</p>
+              <p>User Interface</p>
+            </div>
+          </a>
+        </div>
+        <div
+          class="work userInterface figma photoshop lazyBackground"
           id="work6"
         >
           <a href="../projects/quotemehappy.html" target="_blank">
@@ -180,6 +191,7 @@
             </div>
           </a>
         </div>
+
         <div
           class="work userInterface figma photoshop lazyBackground"
           id="work7"
