--- a/projects/tpwars.html
+++ b/projects/tpwars.html
@@ -48,68 +48,51 @@
           <div id="projectDescription">
             <h4>Interface Design</h4>
             <p>
-              This is a personal project , it was born during Covid-19, with
-              people stockpiling food and toilet paper which lead to an
-              increasing waste and shortage of essential items. What if each
-              person could know exactly how much of each item they need? And so,
-              TPWARS was born.
+              This personal project was born during Covid-19, with people
+              stockpiling food and toilet paper which lead to an increasing
+              waste and shortage of essential items. What if each person could
+              know exactly how much of each item they need? And so, TPWARS was
+              born.
             </p>
             <div id="aditionalInfo">
               <p>
-                <span class="darkPinkFont">Tools used:</span> Photoshop,
-                illustrator, coda 2
+                <span class="darkPinkFont">Tools used:</span> Adobe XD,
+                illustrator, Visual Studio Code
               </p>
-              <p><span class="darkPinkFont">Year:</span> 2018</p>
-              <p><span class="darkPinkFont">Company:</span> Ve</p>
+              <p><span class="darkPinkFont">Year:</span> 2020</p>
+              <p>
+                <span class="darkPinkFont">Programming Language:</span> React
+              </p>
             </div>
           </div>
           <div id="projectAssets">
-            <img
-              src="https://mir-s3-cdn-cf.behance.net/project_modules/fs/96d7ae71808879.5bd1be5c0c986.png"
-              alt="website dekstop view"
-            />
-            <p>Desktop view</p>
-            <img
-              src="https://mir-s3-cdn-cf.behance.net/project_modules/disp/0e307671808879.5bd1be5c0cfdf.png"
-              alt="website mobile view"
-            />
-            <p>Mobile view</p>
-            <a href="../imgs/Proposal Cover.png" target="_blank">
-              <img src="../imgs/Proposal Cover.png" alt="proposal cover"
-            /></a>
-            <p>Proposal cover</p>
-            <a href="../imgs/VeBrand.png" target="_blank"
-              ><img
-                src="../imgs/VeBrand.png"
-                alt="Ve Brand page of the proposal"
-            /></a>
-            <p>
-              Brand & colours<br />
-              [click on the image to enlarge]
+            <img src="../imgs/WebHomepage@2x.jpg" alt="website dekstop view" />
+            <p>Home Page - Desktop view</p>
+
+            <img src="../imgs/WebEmptyDashboard@2x.jpg" alt="empty Dashboard" />
+            <p>Empty Dashboard Page</p>
+            <img src="../imgs/WebCreateitem@2x.jpg" alt="Create Item Form" />
+            <p>Create Item Page - Desktop View</p>
+            <img src="../imgs/WebDashboard@2x.jpg" alt="Dashboard" />
+            <p>Dashboard - Desktop View</p>
+
+            <p class="longDescription">
+              After testing a prototype with users there was a few design flaws
+              that stand out:<br />
+              - one of the things that stand out was it was not clear how users
+              flipped a card. To solved this it was implemented a rounded corner
+              on the cards. <br />This solution raised another problem, the
+              location of the delete icon on the back of the card.<br /><br />
+              To solve the problem the consume add stock button was reduced, the
+              consume button was moved to the front of the card, where it is
+              easier for the user to consume an item, and the delete icon moved
+              to the bottom back of the card. Below a screenshot taken from the
+              prototype were the amends were done. This is a low fidelity
+              prototype, so colours of the UI are not being taken in
+              consideration.
             </p>
-            <a href="../imgs/consistency.png" target="_blank"
-              ><img
-                src="../imgs/consistency.png"
-                alt="consistency page of the proposal"
-            /></a>
-            <p>
-              Consistency<br />
-              [click on the image to enlarge]
-            </p>
-            <a href="../imgs/ContentAndStructure.png" target="_blank"
-              ><img
-                src="../imgs/ContentAndStructure.png"
-                alt="content and structure page of the proposal"
-            /></a>
-            <p>
-              Content & structure<br />
-              [click on the image to enlarge]
-            </p>
-            <a href="../imgs/TechnicalSide.png" target="_blank"
-              ><img
-                src="../imgs/TechnicalSide.png"
-                alt="technical side page of the proposal"
-            /></a>
+            <img src="../imgs/cards.jpg" alt="interface cards" />
+            <p>Front and Back of an item card</p>
           </div>
         </div>
       </div>
