--- a/pages/projects.html
+++ b/pages/projects.html
@@ -171,6 +171,17 @@
         <p id="nothingToShow">Sorry, nothing to display in this category.</p>
         <div
           class="work userInterface figma photoshop lazyBackground"
+          id="work9"
+        >
+          <a href="../projects/tpwars.html" target="_blank">
+            <div class="workInfo">
+              <p>TPWARS</p>
+              <p>User Interface</p>
+            </div>
+          </a>
+        </div>
+        <div
+          class="work userInterface figma photoshop lazyBackground"
           id="work8"
         >
           <a href="../projects/portfolio.html" target="_blank">
