--- a/projects/tpwars.html
+++ b/projects/tpwars.html
@@ -93,6 +93,20 @@
             </p>
             <img src="../imgs/cards.jpg" alt="interface cards" />
             <p>Front and Back of an item card</p>
+            <h2>Promotional Images</h2>
+            <img
+              src="../imgs/TPWARS1.jpg"
+              alt="Start tracking your consumption and avoid waste"
+            /><br /><br />
+
+            <img
+              src="../imgs/TPWARS3.jpg"
+              alt="Never run out of your favourites"
+            /><br /><br />
+            <img
+              src="../imgs/TPWARS5.jpg"
+              alt="Don't worry about the small things, focus on what matters to you"
+            />
           </div>
         </div>
       </div>
