updated tp wars text

--- a/projects/tpwars.html
+++ b/projects/tpwars.html
@@ -89,7 +89,10 @@
               to the bottom back of the card. Below a screenshot taken from the
               prototype were the amends were done. This is a low fidelity
               prototype, so colours of the UI are not being taken in
-              consideration.
+              consideration.<br /><br />
+              All the buttons on the interface have a minimum clicking area of
+              48 by 48dp to make sure there's enough space for the users to
+              click.
             </p>
             <img src="../imgs/cards.jpg" alt="interface cards" />
             <p>Front and Back of an item card</p>
